Trying to fix issue with agility meeting pic not showing

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -88,7 +88,7 @@ WINS
 }
 
 #win-1{
-  background: url(agility-meeting.png) no-repeat center center scroll;
+  background: url(agility-meeting-yellow.png) no-repeat center center scroll;
   width: 100%;
   padding: 50px 0;
   color: #fff;
